--- a/example/package.json
+++ b/example/package.json
@@ -17,11 +17,13 @@
     "@types/node": "file:../node_modules/@types/node",
     "@types/react": "file:../node_modules/@types/react",
     "@types/react-dom": "file:../node_modules/@types/react-dom",
+    "bootstrap": "^4.6.0",
     "react": "file:../node_modules/react",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "file:../node_modules/react-dom",
+    "react-password-validator": "file:..",
     "react-scripts": "file:../node_modules/react-scripts",
-    "typescript": "file:../node_modules/typescript",
-    "react-password-validator": "file:.."
+    "typescript": "file:../node_modules/typescript"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
