--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "tsk-murakami/react-password-validator",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.tsx",
+  "source": "src/index.ts",
   "engines": {
     "node": ">=10"
   },
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": ">= 16.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -56,6 +56,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "password-validator": "^5.1.1"
   },
   "files": [
     "dist"
