--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-password-validator",
-  "version": "1.0.0",
+  "name": "react-use-password-validator",
+  "version": "0.0.1",
   "description": "React Hooks Password Validator",
   "author": "tsk-murakami",
   "license": "MIT",
@@ -63,6 +63,11 @@
   "dependencies": {
     "password-validator": "^5.1.1"
   },
+  "keywords": [
+    "react",
+    "react-hooks",
+    "password-validator"
+  ],
   "files": [
     "dist"
   ]
